--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -24,7 +24,7 @@
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:text="Catch up with interesting workshops happening in campus"
+               android:text="Catch up with interesting events happening in campus"
                android:fontFamily="sans-serif-thin"
                android:textSize="16sp"
                android:padding="10dp"
