--- a/app/src/main/res/layout/fragment_post_blog.xml
+++ b/app/src/main/res/layout/fragment_post_blog.xml
@@ -29,7 +29,7 @@
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     android:layout_height="match_parent"
-                    app:theme="@style/WorkshopTitleEditText"
+                    app:theme="@style/eventTitleEditText"
                     >
 
                     <EditText
@@ -37,8 +37,8 @@
                         android:layout_height="wrap_content"
                         android:hint="Title"
                         android:textSize="24sp"
-                        app:hintTextAppearance="@style/WorkshopTitleEditText"
-                        android:id="@+id/workshopEditText"
+                        app:hintTextAppearance="@style/eventTitleEditText"
+                        android:id="@+id/blog_title_text"
                         />
 
                 </android.support.design.widget.TextInputLayout>
@@ -71,19 +71,30 @@
                     android:background="@color/colorPrimaryHint"
                     />
 
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@color/colorPrimaryHint"
+                    android:id="@+id/spinner">
+
+                </Spinner>
+
                 <EditText
                     android:textColor="#fff"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
                     android:textSize="14sp"
-                    android:hint="CATEGORY"
+                    android:hint="AUTHOR"
                     android:layout_marginLeft="16dp"
                     android:fontFamily="sans-serif-light"
                     android:letterSpacing="0.1"
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="4dp"
-                    android:id="@+id/blog_category_text"
+                    android:id="@+id/blog_author"
                     android:textColorHint="@color/colorHintText"
                     android:background="@color/colorPrimaryHint"
                     />
@@ -104,6 +115,8 @@
                     android:textColorHint="@color/colorHintText"
                     android:background="@color/colorPrimaryHint"
                     />
+
+
 
 
 
@@ -145,7 +158,7 @@
 
         android:layout_margin="16dp"
         android:src="@drawable/ic_check_black_24dp"
-        android:id="@+id/fab"
+        android:id="@+id/fab_blog"
         />
 
 
