--- a/app/src/main/res/layout/fragment_post_event.xml
+++ b/app/src/main/res/layout/fragment_post_event.xml
@@ -29,7 +29,7 @@
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     android:layout_height="match_parent"
-                    app:theme="@style/WorkshopTitleEditText"
+                    app:theme="@style/eventTitleEditText"
                     >
 
                     <EditText
@@ -37,8 +37,8 @@
                         android:layout_height="wrap_content"
                         android:hint="Workshop Title"
                         android:textSize="24sp"
-                        app:hintTextAppearance="@style/WorkshopTitleEditText"
-                        android:id="@+id/workshopEditText"
+                        app:hintTextAppearance="@style/eventTitleEditText"
+                        android:id="@+id/eventEditText"
                         />
 
                 </android.support.design.widget.TextInputLayout>
@@ -50,6 +50,17 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/ll"
                 android:orientation="vertical">
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@color/colorPrimaryHint"
+                    android:id="@+id/spinner">
+
+                </Spinner>
 
                 <EditText
                     android:layout_width="match_parent"
@@ -63,7 +74,7 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
-                    android:id="@+id/instructorNameText"
+                    android:id="@+id/organiserNameText"
                     android:textColorHint="@color/colorHintText"
                     android:background="@color/colorPrimaryHint"
                     />
@@ -79,7 +90,7 @@
                     android:letterSpacing="0.1"
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="4dp"
-                    android:id="@+id/instructorContactText"
+                    android:id="@+id/organiserContactText"
                     android:textColorHint="@color/colorHintText"
                     android:background="@color/colorPrimaryHint"
                     />
@@ -102,10 +113,10 @@
 
                         <Button
                             android:padding="8dp"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="PICK DATE"
-                            android:layout_below="@id/workshopEditText"
+                            android:layout_below="@id/eventEditText"
                             android:textSize="14sp"
                             android:id="@+id/button"
                             android:textColor="#c2c2c2"
@@ -118,7 +129,7 @@
                             android:layout_height="wrap_content"
                             android:text=""
 
-                            android:padding="16dp"
+                            android:padding="4dp"
                             android:textSize="14sp"
 
                             android:textColor="#fff"
@@ -139,7 +150,7 @@
                             android:padding="8dp"
                             android:textColor="#c2c2c2"
                             android:theme="@style/BrandButtonStyle"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="PICK TIME"
                             android:id="@+id/button2"
@@ -150,7 +161,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=""
-                            android:padding="16dp"
+                            android:padding="4dp"
                             android:textSize="14sp"
                             android:id="@+id/timeTextView"
                             android:textColor="#fff"
@@ -160,144 +171,48 @@
                     </LinearLayout>
 
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryHint"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:padding="0dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="SELECT BLOCK"
-                        android:fontFamily="sans-serif-light"
-                        android:letterSpacing="0.1"
-
-                        android:textColor="@color/colorHintText"
-                        android:paddingLeft="16dp"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
-                        android:paddingRight="8dp"
-                        />
-
-
-                    <RadioGroup
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/block_radio_group"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:paddingBottom="5dp"
-                        android:weightSum="3"
-                        >
-
-                        <android.support.v7.widget.AppCompatRadioButton
-                            android:textColor="@color/colorHintText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:buttonTint="@color/colorHintText"
-                            android:text="E"/>
-
-                        <android.support.v7.widget.AppCompatRadioButton
-
-                            android:textColor="@color/colorHintText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:buttonTint="@color/colorHintText"
-                            android:text="D"/>
-
-                        <android.support.v7.widget.AppCompatRadioButton
-                            android:textColor="@color/colorHintText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:buttonTint="@color/colorHintText"
-                            android:text="C"/>
-
-
-                    </RadioGroup>
 
                 </LinearLayout>
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryHint"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="4dp"
-                    android:padding="0dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="CHOOSE CATEGORY"
-                        android:fontFamily="sans-serif-light"
-                        android:letterSpacing="0.1"
-
-                        android:textColor="@color/colorHintText"
-                        android:paddingLeft="16dp"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
-                        android:paddingRight="8dp"
-                        />
-
-                    <RadioGroup
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:paddingBottom="5dp"
-                        android:weightSum="2"
-
-                        android:id="@+id/category_radio_group"
-                        >
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:buttonTint="@color/colorHintText"
-                            android:textColor="@color/colorHintText"
-
-                            android:text="Tech"/>
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:buttonTint="@color/colorHintText"
-                            android:textColor="@color/colorHintText"
-                            android:text="Non Tech"/>
-                    </RadioGroup>
-
-                </LinearLayout>
 
                 <EditText
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
-                    android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:textColorHint="@color/colorHintText"
                     android:background="@color/colorPrimaryHint"
-                    android:hint="INSTRUCTOR'S NOTES"
+                    android:hint="VENUE"
                     android:fontFamily="sans-serif-light"
                     android:letterSpacing="0.1"
-                    android:id="@+id/instructorEditText"
+                    android:id="@+id/venueEditText"
                     android:textSize="14sp"
                     android:inputType="textMultiLine"
 
                     />
+
+                <EditText
+                    android:gravity="top|left"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:minHeight="100dp"
+                    android:layout_marginBottom="4dp"
+                    android:textColorHint="@color/colorHintText"
+                    android:background="@color/colorPrimaryHint"
+                    android:hint="DETAILS"
+                    android:fontFamily="sans-serif-light"
+                    android:letterSpacing="0.1"
+                    android:id="@+id/detailsEditText"
+                    android:textSize="14sp"
+                    android:inputType="textMultiLine"
+                    />
+
             </LinearLayout>
 
 
