--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="WorkshopTitleEditText" parent="Theme.AppCompat.NoActionBar">
+    <style name="eventTitleEditText" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">#00f</item>
         <item name="colorPrimaryDark">#9ff</item>
         <item name="colorAccent">#c2c2c2</item>
@@ -49,7 +49,20 @@
 
     <style name="MyStyle" parent="Base.Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/btn_colored_my_material</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Widget.Button.Inverse</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Widget.Button.Inverse
+        </item>
+    </style>
+
+    <style name="FullscreenTheme" parent="AppTheme">
+        <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
+        <item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
+    </style>
+
+    <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/black_overlay</item>
     </style>
 
 
